gitops/mc-ui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mc-ui
  labels:
    app: mc-ui
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: mc-ui
